tests/errors/let_undefined_symbol.dash
# Test let expression with undefined symbol
pub result = let x = undefined_var in x + 1